# book-rag-app

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  bookrag.db  docker-compose.yml  main.py  pyproject.toml
app/: config.py  extensions.py  routes.py
app/static/css/: style.css
app/static/js/: chat.js
app/templates/: chat.html  login.html  register.html
database/: __init__.py  connection.py  create_user_db.py  document_loader.py  process_documents.py  vector_store.py
evaluation/: evaluator.py  generate_answers.py
evaluation/data/: ragas_data.csv  ragas_data_with_answers.csv  ragas_data_with_answers_20251125_190649.csv
evaluation/results/: overall_summary.md  ragas_results_chat.csv  ragas_results_final.csv  ragas_results_rag.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: avatar.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  label.tsx  scroll-area.tsx  textarea.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Chat.tsx  Login.tsx  Register.tsx
prompts/: generate_answer.py  grade_documents.py  retrieval_question.py
rag/: chains.py  graph.py  nodes.py
schema/: __init__.py  models.py  users.py
tests/: database_tests.py  document_loader.py  rag_pipeline.py  test_api.py  test_database.py  test_document_loader.py  test_grade_documents.py  test_rag_pipeline.py
utils/: crud.py  helpers.py  logging.py
