[project]
name = "bookrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask[async]>=3.1.2",
    "flask-limiter>=3.5.0",
    "flask-wtf>=1.2.0",
    "werkzeug>=3.0.0",
    "langchain-chroma>=1.0.0",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "pydantic>=2.12.4",
    "pypdf>=6.3.0",
    "ragas>=0.3.9",
    "sqlalchemy>=2.0.44",
    "alembic>=1.13.0",
    "python-dotenv>=1.2.1",
    "langchain-text-splitters>=1.0.0",
    "tqdm>=4.66.0",
    "datasets>=2.14.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
lint.ignore = ["E402"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
